--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+    mavenLocal()
 }
 
 
@@ -45,5 +46,6 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.jetbrains.kotlin:kotlin-stdlib")
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+	compile group: 'com.github.pochi', name: 'pochi-runner', version:'1.0-SNAPSHOT'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
