--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/gradle
+#
+files/*.class
+files/*.csv
+files/*.jar
