--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ repositories {
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
     mavenLocal()
-    maven { url 'https://jitpack.io' }
 }
 
 
@@ -48,8 +47,8 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib")
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compile group: 'com.github.pochi', name: 'pochi-runner', version:'1.0-SNAPSHOT'
-    compile 'com.github.frendyxzc:KHttp:0.0.6'
-    // https://mvnrepository.com/artifact/org.json/json
+	compile 'com.squareup.okhttp3:okhttp:3.9.0'
+	// https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20170516'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
