--- a/build.gradle
+++ b/build.gradle
@@ -50,5 +50,6 @@ dependencies {
 	compile 'com.squareup.okhttp3:okhttp:3.9.0'
 	// https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20170516'
+    compile 'com.natpryce:konfig:1.6.0.0'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
